<resources>
    <string name="app_name">p5_75_5B6</string>
    <string name="web_url">Web Url</string>
    <string name="browes">Browes</string>
    <string name="phone_no">Phone No</string>
    <string name="call">Call</string>
    <string name="call_log">Call Log</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="alarm">Alarm</string>
</resources>